Fix dark mode flashing when loading pages and store preference

--- a/src/css/vars-dark.css
+++ b/src/css/vars-dark.css
@@ -1,3 +1,9 @@
+@media (prefers-color-scheme: dark) {
+  html {
+    content: "dark";
+  }
+}
+
 [data-theme="dark"] {
   /* colors */
   --color-white: #fff;
